feat: creates route to get logged user data from token
